--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.0.0",
+    "@supabase/supabase-js": "^2.45.6",
     "autoprefixer": "10.4.20",
     "eslint": "9.13.0",
     "eslint-config-next": "15.0.1",
